// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PetFieldsView > renders Disabled 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-0cyk5rcyk"
        id="mantine-0cyk5rcyk-label"
      >
        Name
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-disabled="true"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-disabled="true"
          data-variant="default"
          disabled=""
          id="mantine-0cyk5rcyk"
          name="$.name"
          required=""
          value="Fido"
        />
      </div>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-checked="true"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            checked=""
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            disabled=""
            id="mantine-0px4bipx4"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
          data-disabled="true"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            data-disabled="true"
            for="mantine-0px4bipx4"
          >
            Alive?
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-PillsInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-PillsInput-label"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Tags
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-PillsInput-wrapper"
        data-multiline="true"
        data-variant="default"
      >
        <div
          class="m_8fb7ebe7 mantine-Input-input mantine-PillsInput-input"
          data-variant="default"
        >
          <div
            class="m_1dcfd90b mantine-PillGroup-group"
          >
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-disabled="true"
              data-variant="default"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                friendly
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-disabled="true"
              data-variant="default"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                happy
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-disabled="true"
              data-variant="default"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                little
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <input
              aria-invalid="false"
              class="m_45c4369d mantine-PillsInputField-field"
              data-disabled="true"
              data-type="visible"
              disabled=""
              id="mantine-12voha2vo"
              name="$.newTag"
              placeholder="A new tag"
              type="text"
              value="fake"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
        data-checked="true"
        data-label-position="right"
        style="--checkbox-color: var(--mantine-color-blue-filled);"
      >
        <div
          class="m_5f6e695e mantine-Checkbox-body"
        >
          <div
            class="m_26062bec mantine-Checkbox-inner"
            data-label-position="right"
          >
            <input
              checked=""
              class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
              disabled=""
              id="mantine-1fu8n1fu8"
              name="$.owner"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="m_bf295423 mantine-Checkbox-icon"
              fill="none"
              viewBox="0 0 10 7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="m_d3ea56bb mantine-Checkbox-labelWrapper"
            data-disabled="true"
          >
            <label
              class="m_8ee546b8 mantine-Checkbox-label"
              data-disabled="true"
              for="mantine-1fu8n1fu8"
            >
              Has Owner?
            </label>
          </div>
        </div>
      </div>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_4081bf90 mantine-Group-root"
          data-grow="true"
          style="--group-child-width: calc(50% - (var(--mantine-spacing-md) - var(--mantine-spacing-md) / 2)); --group-gap: var(--mantine-spacing-md); --group-align: start; --group-justify: flex-start; --group-wrap: wrap;"
        >
          <div
            class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          >
            <label
              class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
              for="mantine-1ssssssss"
              id="mantine-1ssssssss-label"
            >
              First Name
            </label>
            <div
              class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
              data-disabled="true"
              data-variant="default"
            >
              <input
                aria-invalid="false"
                autocapitalize="words"
                class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
                data-disabled="true"
                data-variant="default"
                disabled=""
                id="mantine-1ssssssss"
                name="$.firstName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          >
            <label
              class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
              for="mantine-25rcyk5rc"
              id="mantine-25rcyk5rc-label"
            >
              Surname
            </label>
            <div
              class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
              data-disabled="true"
              data-variant="default"
            >
              <input
                aria-invalid="false"
                autocapitalize="words"
                class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
                data-disabled="true"
                data-variant="default"
                disabled=""
                id="mantine-25rcyk5rc"
                name="$.surname"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            for="mantine-2ipx4bipx"
            id="mantine-2ipx4bipx-label"
          >
            Phone number
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-disabled="true"
            data-variant="default"
            data-with-right-section="true"
          >
            <input
              aria-invalid="false"
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-disabled="true"
              data-variant="default"
              disabled=""
              id="mantine-2ipx4bipx"
              name="$.phoneNumber"
              placeholder="04xxxxxxxx"
              type="tel"
              value=""
            />
            <div
              class="m_82577fc2 mantine-Input-section mantine-TextInput-section"
              data-position="right"
            >
              <button
                class="mantine-focus-auto mantine-active m_220c80f2 m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="subtle"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            for="mantine-2voha2voh"
            id="mantine-2voha2voh-label"
          >
            Email
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-disabled="true"
            data-variant="default"
          >
            <input
              aria-invalid="false"
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-disabled="true"
              data-variant="default"
              disabled=""
              id="mantine-2voha2voh"
              name="$.email"
              placeholder="me@somewhere.org"
              type="email"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active _hot_3200d9 m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`PetFieldsView > renders Empty 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-0cyk5rcyk"
        id="mantine-0cyk5rcyk-label"
      >
        Name
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-0cyk5rcyk"
          name="$.name"
          required=""
          value=""
        />
      </div>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-0px4bipx4"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-0px4bipx4"
          >
            Alive?
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-PillsInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-PillsInput-label"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Tags
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-PillsInput-wrapper"
        data-multiline="true"
        data-variant="default"
      >
        <div
          class="m_8fb7ebe7 mantine-Input-input mantine-PillsInput-input"
          data-variant="default"
        >
          <div
            class="m_1dcfd90b mantine-PillGroup-group"
          >
            <input
              aria-invalid="false"
              class="m_45c4369d mantine-PillsInputField-field"
              data-type="visible"
              id="mantine-12voha2vo"
              name="$.newTag"
              placeholder="A new tag"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
        data-label-position="right"
        style="--checkbox-color: var(--mantine-color-blue-filled);"
      >
        <div
          class="m_5f6e695e mantine-Checkbox-body"
        >
          <div
            class="m_26062bec mantine-Checkbox-inner"
            data-label-position="right"
          >
            <input
              class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
              id="mantine-1fu8n1fu8"
              name="$.owner"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="m_bf295423 mantine-Checkbox-icon"
              fill="none"
              viewBox="0 0 10 7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="m_d3ea56bb mantine-Checkbox-labelWrapper"
          >
            <label
              class="m_8ee546b8 mantine-Checkbox-label"
              for="mantine-1fu8n1fu8"
            >
              Has Owner?
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active _hot_3200d9 m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`PetFieldsView > renders Errors 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
      data-error="true"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-0cyk5rcyk"
        id="mantine-0cyk5rcyk-label"
      >
        Name
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-error="true"
        data-variant="default"
        style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2);"
      >
        <input
          aria-describedby="mantine-0cyk5rcyk-error"
          aria-invalid="true"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-error="true"
          data-variant="default"
          id="mantine-0cyk5rcyk"
          name="$.name"
          required=""
          value="Bad"
        />
      </div>
      <p
        class="m_8f816625 mantine-InputWrapper-error mantine-TextInput-error"
        id="mantine-0cyk5rcyk-error"
      >
        Name must be at least 8 characters long
      </p>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-0px4bipx4"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-0px4bipx4"
          >
            Alive?
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-PillsInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-PillsInput-label"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Tags
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-PillsInput-wrapper"
        data-multiline="true"
        data-variant="default"
      >
        <div
          class="m_8fb7ebe7 mantine-Input-input mantine-PillsInput-input"
          data-variant="default"
        >
          <div
            class="m_1dcfd90b mantine-PillGroup-group"
          >
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-variant="default"
              data-with-remove="true"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                ugly
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <input
              aria-invalid="false"
              class="m_45c4369d mantine-PillsInputField-field"
              data-type="visible"
              id="mantine-12voha2vo"
              name="$.newTag"
              placeholder="A new tag"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
        data-checked="true"
        data-label-position="right"
        style="--checkbox-color: var(--mantine-color-blue-filled);"
      >
        <div
          class="m_5f6e695e mantine-Checkbox-body"
        >
          <div
            class="m_26062bec mantine-Checkbox-inner"
            data-label-position="right"
          >
            <input
              checked=""
              class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
              id="mantine-1fu8n1fu8"
              name="$.owner"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="m_bf295423 mantine-Checkbox-icon"
              fill="none"
              viewBox="0 0 10 7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="m_d3ea56bb mantine-Checkbox-labelWrapper"
          >
            <label
              class="m_8ee546b8 mantine-Checkbox-label"
              for="mantine-1fu8n1fu8"
            >
              Has Owner?
            </label>
          </div>
        </div>
      </div>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_4081bf90 mantine-Group-root"
          data-grow="true"
          style="--group-child-width: calc(50% - (var(--mantine-spacing-md) - var(--mantine-spacing-md) / 2)); --group-gap: var(--mantine-spacing-md); --group-align: start; --group-justify: flex-start; --group-wrap: wrap;"
        >
          <div
            class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          >
            <label
              class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
              for="mantine-1ssssssss"
              id="mantine-1ssssssss-label"
            >
              First Name
            </label>
            <div
              class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
              data-variant="default"
            >
              <input
                aria-invalid="false"
                autocapitalize="words"
                class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
                data-variant="default"
                id="mantine-1ssssssss"
                name="$.firstName"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          >
            <label
              class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
              for="mantine-25rcyk5rc"
              id="mantine-25rcyk5rc-label"
            >
              Surname
            </label>
            <div
              class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
              data-variant="default"
            >
              <input
                aria-invalid="false"
                autocapitalize="words"
                class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
                data-variant="default"
                id="mantine-25rcyk5rc"
                name="$.surname"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            for="mantine-2ipx4bipx"
            id="mantine-2ipx4bipx-label"
          >
            Phone number
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-variant="default"
            data-with-right-section="true"
          >
            <input
              aria-invalid="false"
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-variant="default"
              id="mantine-2ipx4bipx"
              name="$.phoneNumber"
              placeholder="04xxxxxxxx"
              type="tel"
              value=""
            />
            <div
              class="m_82577fc2 mantine-Input-section mantine-TextInput-section"
              data-position="right"
            >
              <button
                class="mantine-focus-auto mantine-active m_220c80f2 m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="subtle"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            for="mantine-2voha2voh"
            id="mantine-2voha2voh-label"
          >
            Email
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-variant="default"
          >
            <input
              aria-invalid="false"
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-variant="default"
              id="mantine-2voha2voh"
              name="$.email"
              placeholder="me@somewhere.org"
              type="email"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active _hot_3200d9 m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`PetFieldsView > renders Populated 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
        data-required="true"
        for="mantine-0px4bipx4"
        id="mantine-0px4bipx4-label"
      >
        Name
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-TextInput-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
        data-variant="default"
      >
        <input
          aria-invalid="false"
          class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
          data-variant="default"
          id="mantine-0px4bipx4"
          name="$.name"
          required=""
          value="Fido"
        />
      </div>
    </div>
    <div
      class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
      data-checked="true"
      data-label-position="right"
      style="--checkbox-color: var(--mantine-color-blue-filled);"
    >
      <div
        class="m_5f6e695e mantine-Checkbox-body"
      >
        <div
          class="m_26062bec mantine-Checkbox-inner"
          data-label-position="right"
        >
          <input
            checked=""
            class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
            id="mantine-12voha2vo"
            name="$.alive"
            type="checkbox"
          />
          <svg
            aria-hidden="true"
            class="m_bf295423 mantine-Checkbox-icon"
            fill="none"
            viewBox="0 0 10 7"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="m_d3ea56bb mantine-Checkbox-labelWrapper"
        >
          <label
            class="m_8ee546b8 mantine-Checkbox-label"
            for="mantine-12voha2vo"
          >
            Alive?
          </label>
        </div>
      </div>
    </div>
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-PillsInput-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-PillsInput-label"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Tags
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-PillsInput-wrapper"
        data-multiline="true"
        data-variant="default"
      >
        <div
          class="m_8fb7ebe7 mantine-Input-input mantine-PillsInput-input"
          data-variant="default"
        >
          <div
            class="m_1dcfd90b mantine-PillGroup-group"
          >
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-variant="default"
              data-with-remove="true"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                friendly
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-variant="default"
              data-with-remove="true"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                happy
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <span
              class="m_44da308b m_7cda1cd6 mantine-Pill-root"
              data-variant="default"
              data-with-remove="true"
            >
              <span
                class="m_1e0e6180 mantine-Pill-label"
              >
                little
              </span>
              <button
                aria-hidden="true"
                class="mantine-focus-auto mantine-active m_ae386778 mantine-Pill-remove m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="transparent"
                tabindex="-1"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </span>
            <input
              aria-invalid="false"
              class="m_45c4369d mantine-PillsInputField-field"
              data-type="visible"
              id="mantine-1fu8n1fu8"
              name="$.newTag"
              placeholder="A new tag"
              type="text"
              value="fake"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_bf2d988c mantine-Checkbox-root m_5f75b09e mantine-Checkbox-root"
        data-checked="true"
        data-label-position="right"
        style="--checkbox-color: var(--mantine-color-blue-filled);"
      >
        <div
          class="m_5f6e695e mantine-Checkbox-body"
        >
          <div
            class="m_26062bec mantine-Checkbox-inner"
            data-label-position="right"
          >
            <input
              checked=""
              class="mantine-focus-auto m_26063560 mantine-Checkbox-input"
              id="mantine-1ssssssss"
              name="$.owner"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="m_bf295423 mantine-Checkbox-icon"
              fill="none"
              viewBox="0 0 10 7"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M4 4.586L1.707 2.293A1 1 0 1 0 .293 3.707l3 3a.997.997 0 0 0 1.414 0l5-5A1 1 0 1 0 8.293.293L4 4.586z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class="m_d3ea56bb mantine-Checkbox-labelWrapper"
          >
            <label
              class="m_8ee546b8 mantine-Checkbox-label"
              for="mantine-1ssssssss"
            >
              Has Owner?
            </label>
          </div>
        </div>
      </div>
      <div
        class="m_6d731127 mantine-Stack-root"
        style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
      >
        <div
          class="m_4081bf90 mantine-Group-root"
          data-grow="true"
          style="--group-child-width: calc(50% - (var(--mantine-spacing-md) - var(--mantine-spacing-md) / 2)); --group-gap: var(--mantine-spacing-md); --group-align: start; --group-justify: flex-start; --group-wrap: wrap;"
        >
          <div
            class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          >
            <label
              class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
              for="mantine-25rcyk5rc"
              id="mantine-25rcyk5rc-label"
            >
              First Name
            </label>
            <div
              class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
              data-variant="default"
            >
              <input
                aria-invalid="false"
                autocapitalize="words"
                class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
                data-variant="default"
                id="mantine-25rcyk5rc"
                name="$.firstName"
                type="text"
                value="Peggy"
              />
            </div>
          </div>
          <div
            class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
          >
            <label
              class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
              for="mantine-2ipx4bipx"
              id="mantine-2ipx4bipx-label"
            >
              Surname
            </label>
            <div
              class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
              data-variant="default"
            >
              <input
                aria-invalid="false"
                autocapitalize="words"
                class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
                data-variant="default"
                id="mantine-2ipx4bipx"
                name="$.surname"
                type="text"
                value="Sue"
              />
            </div>
          </div>
        </div>
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            for="mantine-2voha2voh"
            id="mantine-2voha2voh-label"
          >
            Phone number
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-variant="default"
            data-with-right-section="true"
          >
            <input
              aria-invalid="false"
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-variant="default"
              id="mantine-2voha2voh"
              name="$.phoneNumber"
              placeholder="04xxxxxxxx"
              type="tel"
              value="0404040404"
            />
            <div
              class="m_82577fc2 mantine-Input-section mantine-TextInput-section"
              data-position="right"
            >
              <button
                class="mantine-focus-auto mantine-active m_220c80f2 m_86a44da5 mantine-CloseButton-root m_87cf2631 mantine-UnstyledButton-root"
                data-variant="subtle"
                type="button"
              >
                <svg
                  fill="none"
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.7816 4.03157C12.0062 3.80702 12.0062 3.44295 11.7816 3.2184C11.5571 2.99385 11.193 2.99385 10.9685 3.2184L7.50005 6.68682L4.03164 3.2184C3.80708 2.99385 3.44301 2.99385 3.21846 3.2184C2.99391 3.44295 2.99391 3.80702 3.21846 4.03157L6.68688 7.49999L3.21846 10.9684C2.99391 11.193 2.99391 11.557 3.21846 11.7816C3.44301 12.0061 3.80708 12.0061 4.03164 11.7816L7.50005 8.31316L10.9685 11.7816C11.193 12.0061 11.5571 12.0061 11.7816 11.7816C12.0062 11.557 12.0062 11.193 11.7816 10.9684L8.31322 7.49999L11.7816 4.03157Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="m_46b77525 mantine-InputWrapper-root mantine-TextInput-root"
        >
          <label
            class="m_8fdc1311 mantine-InputWrapper-label mantine-TextInput-label"
            for="mantine-38n1fu8n1"
            id="mantine-38n1fu8n1-label"
          >
            Email
          </label>
          <div
            class="m_6c018570 mantine-Input-wrapper mantine-TextInput-wrapper"
            data-variant="default"
          >
            <input
              aria-invalid="false"
              class="m_8fb7ebe7 mantine-Input-input mantine-TextInput-input"
              data-variant="default"
              id="mantine-38n1fu8n1"
              name="$.email"
              placeholder="me@somewhere.org"
              type="email"
              value="x@y.z"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      data-with-border="true"
    >
      <div
        class="m_e615b15f mantine-Card-root m_1b7284a3 mantine-Paper-root"
      >
        <h1>
          Species
        </h1>
      </div>
    </div>
    <button
      class="mantine-focus-auto mantine-active _hot_3200d9 m_77c9d27d mantine-Button-root m_87cf2631 mantine-UnstyledButton-root"
      style="--button-color: var(--mantine-color-white);"
      type="button"
    >
      <span
        class="m_80f1301b mantine-Button-inner"
      >
        <span
          class="m_811560b9 mantine-Button-label"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
</div>
`;
